--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -14,7 +14,7 @@
   background: #ffffff;
 }
 #menu-10 .mbr-navbar__hamburger {
-  color: #ffffff;
+  color: #553982;
 }
 #header4-7 P {
   text-align: center;
