AMS Edits, Partner and Founders

--- a/assets/mobirise/css/style.css
+++ b/assets/mobirise/css/style.css
@@ -276,12 +276,6 @@ html {
 .mbr-navbar--absolute {
   position: absolute;
 }
-/* fix for popup menu conflict */
-@media (max-width: 480px) {
-  .mbr-navbar--absolute.mbr-navbar[id^=menu-] {
-    position: absolute;
-  }
-}
 .mbr-navbar--transparent .mbr-navbar__section {
   background: none;
 }
@@ -298,7 +292,7 @@ html {
     width: 100%;
   }
   .mbr-navbar__column {
-    max-height: 100vh;
+    max-height: 100%;
     overflow-x: hidden;
     overflow-y:auto;
   }
@@ -1598,7 +1592,6 @@ html {
 .mbr-number--inverse-price .mbr-number__right {
   display: inline;
 }
-
 .engine {
 	position: absolute;
 	text-indent: -2400px;
