--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,7 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700);
-@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
-@import url(https://fonts.googleapis.com/css?family=Titillium+Web:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700);
 
 
 
@@ -18,50 +16,17 @@
 #menu-10 .mbr-navbar__hamburger {
   color: #553982;
 }
-#menu-10 .mbr-brand__name a {
-  font-size: 21px;
-  font-family: 'Open Sans Condensed', sans-serif;
-}
-#menu-10 .mbr-navbar__items a {
-  font-size: 18px;
-  font-family: 'Montserrat', sans-serif;
-}
-#header2-16 H1 {
-  color: #27aae0;
-  font-size: 60px;
-}
-#header2-16 P {
-  font-size: 20px;
-}
-#msg-box5-17 .mbr-header__text {
-  color: #9365b8;
-  font-size: 46px;
-}
-#msg-box5-17 .mbr-header__subtext {
-  color: #ffffff;
-}
-#msg-box5-17 .mbr-article {
-  color: #ffffff;
-}
-#msg-box3-15 .mbr-header .mbr-header__text {
-  text-align: left;
-  color: #f97352;
-  font-size: 46px;
-}
-#msg-box3-15 .mbr-header .mbr-header__subtext {
+#header4-7 P {
   text-align: center;
+  font-family: 'Roboto Condensed', sans-serif;
 }
-#msg-box3-15 .mbr-article P {
-  color: #ffffff;
-  font-size: 22px;
-}
-#msg-box3-15 .mbr-article H1 {
-  color: #ffffff;
-  text-align: left;
+#header4-7 H1 {
+  font-size: 60px;
+  text-align: center;
+  font-family: 'PT Sans Narrow', sans-serif;
 }
 #msg-box4-6 .mbr-header__text {
-  color: #97d0e7;
-  font-size: 36px;
+  color: #ffffff;
 }
 #msg-box4-6 .mbr-header__subtext {
   color: #ffffff;
@@ -70,32 +35,16 @@
   color: #ffffff;
 }
 #msg-box4-6 .mbr-article P {
-  font-family: 'Titillium Web', sans-serif;
-  color: #ffffff;
-  font-size: 22px;
-  text-align: left;
-}
-#msg-box4-6 .mbr-article B {
-  color: #ffffff;
-}
-#msg-box1-12 .mbr-header .mbr-header__text {
-  color: #f97352;
-  font-size: 46px;
-}
-#msg-box1-12 .mbr-article {
-  color: #fff;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 #msg-box1-15 .mbr-header .mbr-header__text {
-  color: #9365b8;
-  font-size: 36px;
+  color: #fff;
 }
 #msg-box1-15 .mbr-article {
   color: #fff;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
 }
-#social-buttons2-17 .mbr-header__text {
-  color: #9365b8;
-}
-#footer1-8 P {
+#form1-14 .mbr-header__text {
+  text-align: center;
   color: #ffffff;
 }
