--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,107 +1,474 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700);
-@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
-@import url(https://fonts.googleapis.com/css?family=Titillium+Web:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Oxygen:400,300,700);
 
 
 
 
-#menu-10 .mbr-brand__name {
-  font-size: 16px;
+
+
+
+
+
+
+#ext_menu-0 .hide-buttons .nav-btn {
+  display: none !important;
 }
-#menu-10.mbr-navbar--stuck .mbr-navbar__section {
-  background: #ffffff;
+#ext_menu-0 .navbar-caption {
+  color: #ffffff;
+  font-family: 'Open Sans', sans-serif;
 }
-#menu-10 .mbr-navbar__hamburger {
-  color: #553982;
-}
-#menu-10 .mbr-brand__name a {
-  font-size: 21px;
-  font-family: 'Open Sans Condensed', sans-serif;
-}
-#menu-10 .mbr-navbar__items a {
-  font-size: 18px;
-  font-family: 'Montserrat', sans-serif;
-}
-#header2-16 H1 {
-  color: #27aae0;
-  font-size: 60px;
-}
-#header2-16 P {
-  font-size: 20px;
-}
-#msg-box5-17 .mbr-header__text {
-  color: #9365b8;
-  font-size: 46px;
-}
-#msg-box5-17 .mbr-header__subtext {
+#ext_menu-0 .navbar-toggler {
   color: #ffffff;
 }
-#msg-box5-17 .mbr-article {
+#ext_menu-0 .close-icon::before,
+#ext_menu-0 .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-0 .link,
+#ext_menu-0 .dropdown-item {
   color: #ffffff;
 }
-#msg-box5-17 .mbr-article H4 {
-  color: #d14841;
+#ext_menu-0 .link {
+  font-size: 0.75rem;
 }
-#msg-box5-17 .mbr-article H3 {
-  color: #9365b8;
+#ext_menu-0 .dropdown-item,
+#ext_menu-0 .nav-dropdown-sm .link {
+  font-size: 0.812rem;
 }
-#msg-box3-15 .mbr-header .mbr-header__text {
+#ext_menu-0 .link:hover,
+#ext_menu-0 .dropdown-item:hover,
+#ext_menu-0 .link:focus,
+#ext_menu-0 .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-0 .link[aria-expanded="true"],
+#ext_menu-0 .dropdown-menu {
+  background: #0e0e0e;
+}
+#ext_menu-0 .nav-dropdown-sm .link:focus,
+#ext_menu-0 .nav-dropdown-sm .link:hover,
+#ext_menu-0 .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-0 .nav-dropdown-sm .dropdown-item:hover {
+  background: #202020!important;
+}
+#ext_menu-0 .navbar,
+#ext_menu-0 .nav-dropdown-sm,
+#ext_menu-0 .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-0 .nav-dropdown-sm .dropdown-menu {
+  background: #282828;
+}
+#ext_menu-0 .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-0 .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-0 .bg-color.transparent.opened .link:hover,
+#ext_menu-0 .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-0 .link[aria-expanded="true"],
+#ext_menu-0 .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#msg-box8-0 .mbr-section-title,
+#msg-box8-0 p {
+  color: #fff;
+}
+#msg-box8-0 .mbr-section-title {
+  font-family: 'Open Sans', sans-serif;
+  color: #000000;
+}
+#features3-0 H4 {
+  font-size: 15px;
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+}
+#features3-0 H5 {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 13px;
+}
+#features3-0 P {
   text-align: left;
-  color: #f97352;
-  font-size: 46px;
+  font-size: 12px;
 }
-#msg-box3-15 .mbr-header .mbr-header__subtext {
+#features3-1 H4 {
+  font-size: 17px;
+  font-family: 'Open Sans', sans-serif;
+}
+#features3-1 H5 {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 13px;
+}
+#features3-1 I {
+  font-size: 13px;
+  font-family: 'Open Sans', sans-serif;
+}
+#features3-2 H4 {
+  font-size: 17px;
+  font-family: 'Open Sans', sans-serif;
+}
+#features3-2 H5 {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 13px;
+}
+#features3-2 SPAN {
+  font-size: 13px;
+  color: #5b5b5b;
+}
+#msg-box8-1 .mbr-section-title,
+#msg-box8-1 p {
+  color: #fff;
+}
+#footer1-0 P {
+  font-family: 'Open Sans', sans-serif;
+  color: #ffffff;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#ext_menu-0 .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-0 .navbar-caption {
+  color: #ffffff;
+  font-family: 'Open Sans', sans-serif;
+}
+#ext_menu-0 .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-0 .close-icon::before,
+#ext_menu-0 .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-0 .link,
+#ext_menu-0 .dropdown-item {
+  color: #ffffff;
+}
+#ext_menu-0 .link {
+  font-size: 0.75rem;
+}
+#ext_menu-0 .dropdown-item,
+#ext_menu-0 .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#ext_menu-0 .link:hover,
+#ext_menu-0 .dropdown-item:hover,
+#ext_menu-0 .link:focus,
+#ext_menu-0 .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-0 .link[aria-expanded="true"],
+#ext_menu-0 .dropdown-menu {
+  background: #0e0e0e;
+}
+#ext_menu-0 .nav-dropdown-sm .link:focus,
+#ext_menu-0 .nav-dropdown-sm .link:hover,
+#ext_menu-0 .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-0 .nav-dropdown-sm .dropdown-item:hover {
+  background: #202020!important;
+}
+#ext_menu-0 .navbar,
+#ext_menu-0 .nav-dropdown-sm,
+#ext_menu-0 .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-0 .nav-dropdown-sm .dropdown-menu {
+  background: #282828;
+}
+#ext_menu-0 .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-0 .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-0 .bg-color.transparent.opened .link:hover,
+#ext_menu-0 .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-0 .link[aria-expanded="true"],
+#ext_menu-0 .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#header1-0 .btn {
+  font-family: 'Open Sans', sans-serif;
+}
+#header1-0 P {
+  font-family: 'Open Sans', sans-serif;
+}
+#header1-0 H1 {
+  font-family: 'Oxygen', sans-serif;
+  font-size: 60px;
+  color: #232323;
+}
+#header1-0 SPAN {
+  color: #28324e;
+}
+#header3-2 .mbr-section-title,
+#header3-2 .mbr-section-subtitle {
   text-align: center;
 }
-#msg-box3-15 .mbr-article P {
-  color: #ffffff;
-  font-size: 22px;
+#header3-2 H3 {
+  font-family: 'Open Sans', sans-serif;
 }
-#msg-box3-15 .mbr-article H1 {
-  color: #ffffff;
+#header3-2 SMALL {
+  font-family: 'Oxygen', sans-serif;
+}
+#header3-2 SPAN {
+  color: #f28281;
+}
+#content2-0 BLOCKQUOTE {
+  font-family: 'Open Sans', sans-serif;
+}
+#content2-0 P {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
+}
+#msg-box5-0 H3 {
+  font-size: 30px;
+  font-family: 'Open Sans', sans-serif;
+}
+#msg-box5-0 SPAN {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 25px;
+}
+#content1-0 P {
+  font-family: 'Oxygen', sans-serif;
+  color: #c1c1c1;
+  font-size: 13px;
+}
+#msg-box3-0 .mbr-section-title,
+#msg-box3-0 p {
+  color: #000;
+}
+#msg-box3-0 .lead UL {
   text-align: left;
 }
-#msg-box4-6 .mbr-header__text {
-  color: #97d0e7;
+#msg-box3-0 .mbr-section-title {
+  color: #ffffff;
+  font-family: 'Open Sans', sans-serif;
   font-size: 32px;
 }
-#msg-box4-6 .mbr-header__subtext {
+#msg-box3-0 .btn {
+  font-family: 'Open Sans', sans-serif;
+}
+#msg-box3-0 .lead P {
+  color: #ffffff;
+  font-family: 'Open Sans', sans-serif;
+}
+#header3-4 .mbr-section-title,
+#header3-4 .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-4 H3 {
+  font-size: 21px;
   color: #ffffff;
 }
-#msg-box4-6 .mbr-article {
-  color: #ffffff;
+#header3-4 SPAN {
+  font-family: 'Open Sans', sans-serif;
 }
-#msg-box4-6 .mbr-article P {
-  font-family: 'Titillium Web', sans-serif;
+#msg-box8-0 .mbr-section-title,
+#msg-box8-0 p {
+  color: #fff;
+}
+#msg-box8-0 .lead P {
+  color: #000000;
+  font-family: 'Open Sans', sans-serif;
+}
+#msg-box8-0 .mbr-section-title {
+  font-family: 'Open Sans', sans-serif;
+  color: #000000;
+}
+#header3-3 .mbr-section-title,
+#header3-3 .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-3 H3 {
+  font-size: 21px;
   color: #ffffff;
+  font-family: 'Open Sans', sans-serif;
+}
+#msg-box5-1 H3 {
   font-size: 22px;
-  text-align: left;
+  font-family: 'Open Sans', sans-serif;
 }
-#msg-box4-6 .mbr-article B {
+#social-buttons4-0 .mbr-section-title,
+#social-buttons4-0 .btn-social {
+  color: #fff;
+}
+#social-buttons4-0 .mbr-section-title {
+  font-size: 17px;
+  font-family: 'Open Sans', sans-serif;
+}
+#header3-1 .mbr-section-title,
+#header3-1 .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-1 SPAN {
+  font-family: 'Open Sans', sans-serif;
+  color: #000000;
+}
+#header3-1 H3 {
+  color: #000000;
+  font-family: 'Oxygen', sans-serif;
+}
+#features4-0 .card-subtitle {
+  color: #bcbcbc;
+  font-family: 'Open Sans', sans-serif;
+}
+#features4-0 .iconbox {
+  background-color: #f2f2f2;
+  border-color: #f2f2f2;
+}
+#features4-0 H4 {
+  font-family: 'Open Sans', sans-serif;
+}
+#features4-0 P {
+  color: #000000;
+  text-align: center;
+}
+#gallery3-0 .mbr-gallery-item > a > span {
+  font-family: 'Open Sans', sans-serif;
+  color: #c1c1c1;
+}
+#header3-0 .mbr-section-title,
+#header3-0 .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-0 H3 {
+  color: #ffffff;
+  font-family: 'Open Sans', sans-serif;
+}
+#features6-0 P {
+  color: #ffffff;
+  text-align: center;
+}
+#features6-0 H4 {
   color: #ffffff;
 }
-#msg-box1-12 .mbr-header .mbr-header__text {
-  color: #f97352;
-  font-size: 46px;
+#footer1-0 P {
+  font-family: 'Open Sans', sans-serif;
+  color: #ffffff;
 }
-#msg-box1-12 .mbr-article {
+
+
+
+
+
+#ext_menu-0 .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-0 .navbar-caption {
+  color: #ffffff;
+  font-family: 'Open Sans', sans-serif;
+}
+#ext_menu-0 .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-0 .close-icon::before,
+#ext_menu-0 .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-0 .link,
+#ext_menu-0 .dropdown-item {
+  color: #ffffff;
+}
+#ext_menu-0 .link {
+  font-size: 0.75rem;
+}
+#ext_menu-0 .dropdown-item,
+#ext_menu-0 .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#ext_menu-0 .link:hover,
+#ext_menu-0 .dropdown-item:hover,
+#ext_menu-0 .link:focus,
+#ext_menu-0 .dropdown-item:focus {
+  color: #c0a375;
+}
+#ext_menu-0 .link[aria-expanded="true"],
+#ext_menu-0 .dropdown-menu {
+  background: #0e0e0e;
+}
+#ext_menu-0 .nav-dropdown-sm .link:focus,
+#ext_menu-0 .nav-dropdown-sm .link:hover,
+#ext_menu-0 .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-0 .nav-dropdown-sm .dropdown-item:hover {
+  background: #202020!important;
+}
+#ext_menu-0 .navbar,
+#ext_menu-0 .nav-dropdown-sm,
+#ext_menu-0 .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-0 .nav-dropdown-sm .dropdown-menu {
+  background: #282828;
+}
+#ext_menu-0 .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-0 .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-0 .bg-color.transparent.opened .link:hover,
+#ext_menu-0 .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#ext_menu-0 .link[aria-expanded="true"],
+#ext_menu-0 .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#msg-box8-0 .mbr-section-title,
+#msg-box8-0 p {
   color: #fff;
 }
-#msg-box1-12 .mbr-header .mbr-header__text {
+#msg-box8-0 .mbr-section-title {
+  color: #000000;
+}
+#msg-box8-0 .lead P {
+  color: #000000;
+}
+#content6-0 P {
+  font-family: 'Open Sans', sans-serif;
+}
+#msg-box8-1 .mbr-section-title,
+#msg-box8-1 p {
   color: #fff;
 }
-#msg-box1-12 .mbr-article {
+#content6-2 P {
+  font-family: 'Open Sans', sans-serif;
+}
+#content6-2 LI {
+  font-family: 'Open Sans', sans-serif;
+}
+#msg-box8-2 .mbr-section-title,
+#msg-box8-2 p {
   color: #fff;
 }
-#msg-box1-15 .mbr-header .mbr-header__text {
-  color: #9365b8;
-  font-size: 36px;
-}
-#msg-box1-15 .mbr-article {
-  color: #fff;
-  font-family: 'Roboto', sans-serif;
-}
-#footer1-8 P {
+#footer1-0 P {
+  font-family: 'Open Sans', sans-serif;
   color: #ffffff;
 }
